Modernize website content and fix layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="stylesheet" href="./styles.css">
+  <!-- <link rel="stylesheet" href="./styles.css"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <title>Samuel Lamb</title>
 
@@ -67,7 +67,7 @@
           <hr class="divider bg-dark my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Senior Computer Engineering major at Florida State University</p>
+          <p class="text-white-75 font-weight-light mb-5">Computer Engineering Graduate from Florida State University</p>
           <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a> -->
         </div>
       </div>
@@ -81,7 +81,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-center mt-0">About Me!</h2>
           <hr class="divider dark my-4">
-          <p class="text-center-50 mb-4">Hello! My name is Samuel Lamb and I am currently a student at Florida State University. I was born in England and moved over here to the states when I was nine.
+          <p class="text-center-50 mb-4">Hello! My name is Samuel Lamb and I am a graduate of Florida State University. I was born in England and moved over here to the states when I was nine.
             My goal is to work in the app development industry or with computer vision and neural networks. My free time consists of pyrography, photography, reading, and working on coding projects. Check out some of my latest projects below!
           </p>
           <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
@@ -96,7 +96,7 @@
       <h2 class="text-center mt-0">Various Connections</h2>
       <hr class="divider my-4">
       <div class="row">
-        <a href="https://github.com/SentientSam" target="_blank" title="GitHub">
+        <a href="https://github.com/SentientSamuel" target="_blank" title="GitHub">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-bug text-primary mb-4"></i>
@@ -111,15 +111,6 @@
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Follow me on LinkedIn!</h3>
             <p class="text-muted mb-0">See what I have going on.</p>
-          </div>
-        </a>
-        </div>
-        <a href="Resume.pdf" target="_blank" title="Résumé">
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-paperclip text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Check out my resume!</h3>
-            <p class="text-muted mb-0">For a quick look at experience and skills.</p>
           </div>
         </a>
         </div>
