--- a/index.html
+++ b/index.html
@@ -114,15 +114,6 @@
           </div>
         </a>
         </div>
-        <a href="https://pc.fsu.edu/person/samuel-sam-lamb" target="_blank" title="FSU">
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gavel text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Find me on FSU!</h3>
-            <p class="text-muted mb-0">A link to my FSU page.</p>
-          </div>
-        </a>
-        </div>
       </div>
     </div>
   </section>
@@ -446,7 +437,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:stl17c@my.fsu.edu">stl17c@my.fsu.edu</a>
+          <a class="d-block" href="mailto:samueltlamb1997@gmail.com">samueltlamb1997@gmail.com</a>
         </div>
       </div>
     </div>
