Slight fix to woding

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-center mt-0">About Me!</h2>
           <hr class="divider dark my-4">
-          <p class="text-center-50 mb-4">Hello! My name is Samuel Lamb and I am a graduate of Florida State University. I was born in England and moved to the states when I was nine.
-            I am currently working as a Controls System Engineer, where I enjoy solving complex problems. In my free time, I am developing a few indie games and pursuing carpentry as a creative outlet.
+          <p class="text-center-50 mb-4">Hello! My name is Samuel Lamb and I am a graduate of Florida State University. I was born in England and moved to the states when I was young.
+            I am currently working as a Controls System Engineer. In my free time, I am developing a few indie games and pursuing carpentry as a creative outlet.
           </p>
           <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
         </div>
