--- a/index.html
+++ b/index.html
@@ -95,24 +95,24 @@
     <div class="container">
       <h2 class="text-center mt-0">Various Connections</h2>
       <hr class="divider my-4">
-      <div class="row">
-        <a href="https://github.com/SentientSamuel" target="_blank" title="GitHub">
+      <div class="row justify-content-center">
         <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-bug text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Check out my GitHub!</h3>
-            <p class="text-muted mb-0">There are various projects I have been and am working on.</p>
-          </div>
-        </a>
+          <a href="https://github.com/SentientSamuel" target="_blank" title="GitHub">
+            <div class="mt-5">
+              <i class="fas fa-4x fa-bug text-primary mb-4"></i>
+              <h3 class="h4 mb-2">Check out my GitHub!</h3>
+              <p class="text-muted mb-0">There are various projects I have been and am working on.</p>
+            </div>
+          </a>
         </div>
-        <a href="https://www.linkedin.com/in/samuel-lamb-a69b66173" target="_blank" title="LinkedIn">
         <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Follow me on LinkedIn!</h3>
-            <p class="text-muted mb-0">See what I have going on.</p>
-          </div>
-        </a>
+          <a href="https://www.linkedin.com/in/samuel-lamb-a69b66173" target="_blank" title="LinkedIn">
+            <div class="mt-5">
+              <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+              <h3 class="h4 mb-2">Follow me on LinkedIn!</h3>
+              <p class="text-muted mb-0">See what I have going on.</p>
+            </div>
+          </a>
         </div>
       </div>
     </div>
@@ -180,7 +180,7 @@
   </section>
 
 
-    <!-- Portfolio Section -->
+    <!-- Portfolio Section
     <section id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters">
@@ -303,7 +303,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
