--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ layout: null
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
 
+  <!-- Custom Dark Mode CSS -->
+  <link href="css/custom-dark-mode.css" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
@@ -44,9 +47,8 @@ layout: null
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#links">Links</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Current Projects</a>
           </li>
@@ -58,6 +60,11 @@ layout: null
           </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <button id="darkModeToggle" class="btn" title="Toggle Dark Mode">
+              <i class="fas fa-moon"></i>
+            </button>
           </li>
         </ul>
       </div>
@@ -96,29 +103,94 @@ layout: null
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section class="page-section" id="links">
+  <!-- Skills & Technologies Section -->
+  <section class="page-section" id="skills">
     <div class="container">
-      <h2 class="text-center mt-0">Various Connections</h2>
+      <h2 class="text-center mt-0">Skills & Technologies</h2>
       <hr class="divider my-4">
+      <p class="text-center text-muted mb-5">Languages and technologies I've worked with, measured by number of projects</p>
+      
       <div class="row justify-content-center">
-        <div class="col-lg-3 col-md-6 text-center">
-          <a href="https://github.com/SentientSamuel" target="_blank" title="GitHub">
-            <div class="mt-5">
-              <i class="fas fa-4x fa-bug text-primary mb-4"></i>
-              <h3 class="h4 mb-2">Check out my GitHub!</h3>
-              <p class="text-muted mb-0">There are various projects I have been and am working on.</p>
+        <div class="col-lg-8">
+          
+          <!-- Python -->
+          <div class="skill-item">
+            <div class="skill-name">
+              <span><i class="fab fa-python"></i> Python</span>
+              <span class="text-muted">15+ projects</span>
             </div>
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <a href="https://www.linkedin.com/in/samuel-lamb-a69b66173" target="_blank" title="LinkedIn">
-            <div class="mt-5">
-              <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-              <h3 class="h4 mb-2">Follow me on LinkedIn!</h3>
-              <p class="text-muted mb-0">See what I have going on.</p>
+            <div class="skill-bar">
+              <div class="skill-progress" style="--skill-width: 90%;">
+                <span>90%</span>
+              </div>
             </div>
-          </a>
+          </div>
+
+          <!-- JavaScript -->
+          <div class="skill-item">
+            <div class="skill-name">
+              <span><i class="fab fa-js"></i> JavaScript</span>
+              <span class="text-muted">12+ projects</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="--skill-width: 80%;">
+                <span>80%</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- C/C++ -->
+          <div class="skill-item">
+            <div class="skill-name">
+              <span><i class="fas fa-code"></i> C/C++</span>
+              <span class="text-muted">10+ projects</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="--skill-width: 75%;">
+                <span>75%</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Java -->
+          <div class="skill-item">
+            <div class="skill-name">
+              <span><i class="fab fa-java"></i> Java</span>
+              <span class="text-muted">8+ projects</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="--skill-width: 65%;">
+                <span>65%</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- HTML/CSS -->
+          <div class="skill-item">
+            <div class="skill-name">
+              <span><i class="fab fa-html5"></i> HTML/CSS</span>
+              <span class="text-muted">10+ projects</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="--skill-width: 85%;">
+                <span>85%</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Git -->
+          <div class="skill-item">
+            <div class="skill-name">
+              <span><i class="fab fa-git-alt"></i> Git/Version Control</span>
+              <span class="text-muted">20+ projects</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="--skill-width: 95%;">
+                <span>95%</span>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -346,23 +418,29 @@ layout: null
           <p class="text-muted mb-5">Let me know if you have any questions or comments! Email, Call, or Text me anytime!</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+      <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-6 text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
           <div>+1 (850) 532-8302</div>
         </div>
-        <div class="col-lg-4 mr-auto text-center">
+        <div class="col-lg-3 col-md-6 text-center mb-5 mb-lg-0">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:samueltlamb1997@gmail.com">samueltlamb1997@gmail.com</a>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row justify-content-center">
-      <a href="faq">
-        <button class="btn btn-primary btn-block">Take me to the faq page</button>
-      </a>
+      <div class="row justify-content-center mt-4">
+        <div class="col-lg-8 text-center">
+          <h4 class="mb-3">Connect With Me</h4>
+          <div class="d-flex justify-content-center">
+            <a href="https://github.com/SentientSamuel" target="_blank" class="contact-link" title="GitHub">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/samuel-lamb-a69b66173" target="_blank" class="contact-link" title="LinkedIn">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -385,6 +463,7 @@ layout: null
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
   <script src="js/projects.js"></script>
+  <script src="js/dark-mode.js"></script>
 
 
 
