Simplify contact section with unified circular icon style

--- a/index.html
+++ b/index.html
@@ -413,26 +413,15 @@ layout: null
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Let's Get In Touch!</h2>
+          <h2 class="mt-0">Connect With Me</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Let me know if you have any questions or comments! Email, Call, or Text me anytime!</p>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-lg-3 col-md-6 text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (850) 532-8302</div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center mb-5 mb-lg-0">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:samueltlamb1997@gmail.com">samueltlamb1997@gmail.com</a>
-        </div>
-      </div>
-      <div class="row justify-content-center mt-4">
-        <div class="col-lg-8 text-center">
-          <h4 class="mb-3">Connect With Me</h4>
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center flex-wrap">
+            <a href="tel:+18505328302" class="contact-link" title="Phone: +1 (850) 532-8302">
+              <i class="fas fa-phone"></i>
+            </a>
+            <a href="mailto:samueltlamb1997@gmail.com" class="contact-link" title="Email">
+              <i class="fas fa-envelope"></i>
+            </a>
             <a href="https://github.com/SentientSamuel" target="_blank" class="contact-link" title="GitHub">
               <i class="fab fa-github"></i>
             </a>
