Add Overseerr button and fix mobile navbar/masthead issues
- Added Media Requests (Overseerr) link to contact section with film icon
- Fixed mobile navbar: always visible with dark background
- Fixed mobile dropdown menu visibility with proper styling
- Improved masthead spacing on mobile devices

--- a/index.html
+++ b/index.html
@@ -428,6 +428,9 @@ layout: null
             <a href="https://www.linkedin.com/in/samuel-lamb-a69b66173" target="_blank" class="contact-link" title="LinkedIn">
               <i class="fab fa-linkedin"></i>
             </a>
+            <a href="https://requests.samuellamb.dev" target="_blank" class="contact-link" title="Media Requests (Overseerr)">
+              <i class="fas fa-film"></i>
+            </a>
           </div>
         </div>
       </div>
