Update skills section to match projects-data.json - add missing categories and fix name mismatches

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ layout: null
               <div class="skill-item" data-skill="Python">
                 <div class="skill-name">
                   <span><i class="fab fa-python"></i> Python</span>
-                  <span class="text-muted">15+ projects</span>
+                  <span class="text-muted">4 projects</span>
                 </div>
                 <div class="skill-bar">
                   <div class="skill-progress" style="--skill-width: 90%;"></div>
@@ -126,54 +126,98 @@ layout: null
               <div class="skill-item" data-skill="JavaScript">
                 <div class="skill-name">
                   <span><i class="fab fa-js"></i> JavaScript</span>
-                  <span class="text-muted">12+ projects</span>
+                  <span class="text-muted">3 projects</span>
                 </div>
                 <div class="skill-bar">
                   <div class="skill-progress" style="--skill-width: 80%;"></div>
                 </div>
               </div>
 
-              <!-- C/C++ -->
-              <div class="skill-item" data-skill="C/C++">
+              <!-- GDScript -->
+              <div class="skill-item" data-skill="GDScript (Godot 4.x)">
                 <div class="skill-name">
-                  <span><i class="fas fa-code"></i> C/C++</span>
-                  <span class="text-muted">10+ projects</span>
+                  <span><i class="fas fa-gamepad"></i> GDScript (Godot 4.x)</span>
+                  <span class="text-muted">3 projects</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="--skill-width: 75%;"></div>
+                  <div class="skill-progress" style="--skill-width: 60%;"></div>
                 </div>
               </div>
 
-              <!-- Java -->
-              <div class="skill-item" data-skill="Java">
+              <!-- C/C++ -->
+              <div class="skill-item" data-skill="C / C++">
                 <div class="skill-name">
-                  <span><i class="fab fa-java"></i> Java</span>
-                  <span class="text-muted">8+ projects</span>
+                  <span><i class="fas fa-code"></i> C / C++</span>
+                  <span class="text-muted">3 projects</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="--skill-width: 65%;"></div>
+                  <div class="skill-progress" style="--skill-width: 60%;"></div>
+                </div>
+              </div>
+
+              <!-- PLC Structured Text -->
+              <div class="skill-item" data-skill="PLC Structured Text (IEC 61131-3)">
+                <div class="skill-name">
+                  <span><i class="fas fa-industry"></i> PLC Structured Text (IEC 61131-3)</span>
+                  <span class="text-muted">2 projects</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="--skill-width: 40%;"></div>
+                </div>
+              </div>
+
+              <!-- YAML / ESPHome -->
+              <div class="skill-item" data-skill="YAML / ESPHome">
+                <div class="skill-name">
+                  <span><i class="fas fa-microchip"></i> YAML / ESPHome</span>
+                  <span class="text-muted">2 projects</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="--skill-width: 40%;"></div>
                 </div>
               </div>
 
               <!-- HTML/CSS -->
-              <div class="skill-item" data-skill="HTML/CSS">
+              <div class="skill-item" data-skill="HTML / CSS">
                 <div class="skill-name">
-                  <span><i class="fab fa-html5"></i> HTML/CSS</span>
-                  <span class="text-muted">10+ projects</span>
+                  <span><i class="fab fa-html5"></i> HTML / CSS</span>
+                  <span class="text-muted">2 projects</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="--skill-width: 85%;"></div>
+                  <div class="skill-progress" style="--skill-width: 40%;"></div>
+                </div>
+              </div>
+
+              <!-- Bash / Shell -->
+              <div class="skill-item" data-skill="Bash / Shell">
+                <div class="skill-name">
+                  <span><i class="fas fa-terminal"></i> Bash / Shell</span>
+                  <span class="text-muted">1 project</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="--skill-width: 20%;"></div>
+                </div>
+              </div>
+
+              <!-- LaTeX -->
+              <div class="skill-item" data-skill="LaTeX">
+                <div class="skill-name">
+                  <span><i class="fas fa-file-alt"></i> LaTeX</span>
+                  <span class="text-muted">1 project</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="--skill-width: 20%;"></div>
                 </div>
               </div>
 
               <!-- Git -->
-              <div class="skill-item" data-skill="Git/Version Control">
+              <div class="skill-item" data-skill="Git / Version Control">
                 <div class="skill-name">
-                  <span><i class="fab fa-git-alt"></i> Git/Version Control</span>
-                  <span class="text-muted">20+ projects</span>
+                  <span><i class="fab fa-git-alt"></i> Git / Version Control</span>
+                  <span class="text-muted">2 projects</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="--skill-width: 95%;"></div>
+                  <div class="skill-progress" style="--skill-width: 40%;"></div>
                 </div>
               </div>
             </div>
