--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ layout: null
     <div class="container">
       <h2 class="text-center mt-0">Skills & Technologies</h2>
       <hr class="divider my-4">
-      <p class="text-center text-muted mb-5">Languages and technologies I've worked with, measured by number of projects. Click a skill to see projects.</p>
+      <p class="text-center text-muted mb-5">Languages and technologies I've worked with, measured by number of projects.</p>
       
       <div class="row justify-content-center">
         <div class="col-lg-12">
