--- a/index.html
+++ b/index.html
@@ -25,76 +25,69 @@ layout: null
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
-  <!-- Theme CSS - Includes Bootstrap -->
-  <link href="css/creative.min.css" rel="stylesheet">
-
-  <!-- Custom Dark Mode CSS -->
-  <link href="css/custom-dark-mode.css" rel="stylesheet">
+  <!-- Tailwind CSS -->
+  <link href="css/tailwind.output.css" rel="stylesheet">
 
 </head>
 
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-    <div class="container">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto my-2 my-lg-0">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#blog">Dev Blog</a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Pictures(WIP)</a>
-          </li> -->
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <button id="darkModeToggle" class="btn" title="Toggle Dark Mode">
-              <i class="fas fa-moon"></i>
-            </button>
-          </li>
-        </ul>
+  <nav class="fixed top-0 left-0 right-0 z-50 bg-white dark:bg-gray-900 shadow-md py-3" id="mainNav">
+    <div class="container mx-auto px-4">
+      <div class="flex items-center justify-between">
+        <button class="lg:hidden p-2 rounded-md text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800" type="button" onclick="document.getElementById('navbarResponsive').classList.toggle('hidden')" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="hidden lg:flex lg:items-center lg:space-x-1 lg:ml-auto" id="navbarResponsive">
+          <a class="px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#about">About</a>
+          <a class="px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#skills">Skills</a>
+          <a class="px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#blog">Dev Blog</a>
+          <a class="px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#contact">Contact</a>
+          <button id="darkModeToggle" class="ml-2 p-2 rounded-md border-2 border-gray-700 dark:border-gray-200 text-gray-700 dark:text-gray-200 hover:bg-primary hover:border-primary hover:text-white dark:hover:bg-primary-dark dark:hover:border-primary-dark transition-colors" title="Toggle Dark Mode">
+            <i class="fas fa-moon"></i>
+          </button>
+        </div>
+      </div>
+      <!-- Mobile menu -->
+      <div class="lg:hidden hidden mt-4 bg-white dark:bg-gray-900 rounded-lg shadow-lg p-4" id="navbarResponsiveMobile">
+        <a class="block px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#about">About</a>
+        <a class="block px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#skills">Skills</a>
+        <a class="block px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#blog">Dev Blog</a>
+        <a class="block px-4 py-2 text-gray-700 dark:text-gray-200 hover:text-primary dark:hover:text-primary-dark transition-colors js-scroll-trigger" href="#contact">Contact</a>
+        <button id="darkModeToggleMobile" class="mt-2 w-full p-2 rounded-md border-2 border-gray-700 dark:border-gray-200 text-gray-700 dark:text-gray-200 hover:bg-primary hover:border-primary hover:text-white dark:hover:bg-primary-dark dark:hover:border-primary-dark transition-colors" title="Toggle Dark Mode">
+          <i class="fas fa-moon"></i> Toggle Dark Mode
+        </button>
       </div>
     </div>
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center justify-content-center text-center">
-        <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Meet Me: Samuel Lamb</h1>
-          <hr class="divider bg-dark my-4">
+  <header class="relative bg-cover bg-center bg-no-repeat min-h-[60vh] lg:min-h-[60vh] flex items-center justify-center text-center" style="background-image: url('img/bg-masthead.jpg');">
+    <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+    <div class="container mx-auto px-4 relative z-10 py-20 lg:py-32">
+      <div class="flex flex-col items-center justify-center h-full">
+        <div class="w-full lg:w-5/6 mb-8">
+          <h1 class="text-4xl lg:text-6xl font-bold text-white uppercase mb-4">Meet Me: Samuel Lamb</h1>
+          <hr class="w-24 h-1 bg-white mx-auto my-6">
         </div>
-        <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Computer Engineering Graduate from Florida State University</p>
-          <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a> -->
+        <div class="w-full lg:w-2/3">
+          <p class="text-lg lg:text-xl text-gray-200 font-light mb-5">Computer Engineering Graduate from Florida State University</p>
         </div>
       </div>
     </div>
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-light" id="about">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h2 class="text-center mt-0">About Me!</h2>
-          <hr class="divider dark my-4">
-          <p class="text-center-50 mb-4">Hello! My name is Samuel Lamb and I am a graduate of Florida State University. I was born in England and moved to the states when I was young.
+  <section class="py-20 bg-gray-50 dark:bg-gray-800" id="about">
+    <div class="container mx-auto px-4">
+      <div class="flex justify-center">
+        <div class="w-full lg:w-2/3 text-center">
+          <h2 class="text-4xl font-bold text-gray-900 dark:text-gray-100 mb-4">About Me!</h2>
+          <hr class="w-24 h-1 bg-primary mx-auto my-6">
+          <p class="text-lg text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">Hello! My name is Samuel Lamb and I am a graduate of Florida State University. I was born in England and moved to the states when I was young.
             I am currently working as a Controls System Engineer. In my free time, I am developing a few indie games and pursuing carpentry as a creative outlet.
           </p>
-          <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
         </div>
       </div>
     </div>
