Convert Jekyll layouts and blog to Tailwind, fix projects-data.json path for absolute URLs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: null
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
-  <!-- Tailwind CSS - Using CDN for quick preview (replace with built file later) -->
+  <!-- Tailwind CSS - Using CDN (replace with built file in production) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
