--- a/blog.html
+++ b/blog.html
@@ -4,15 +4,15 @@ title: Dev Blog Archive
 permalink: /devblog/
 ---
 
-<div class="list-group">
+<div class="space-y-6">
   {% for post in site.posts %}
-    <a href="{{ post.url | relative_url }}" class="list-group-item list-group-item-action flex-column align-items-start border-0 mb-4 shadow-sm rounded">
-      <div class="d-flex w-100 justify-content-between">
-        <h3 class="mb-1 text-primary">{{ post.title }}</h3>
-        <small class="text-muted">{{ post.date | date: "%b %-d, %Y" }}</small>
+    <a href="{{ post.url | relative_url }}" class="block p-6 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 hover:border-primary dark:hover:border-primary-dark transition-colors shadow-md hover:shadow-lg">
+      <div class="flex justify-between items-start mb-3">
+        <h3 class="text-2xl font-semibold text-primary dark:text-primary-dark mb-2">{{ post.title }}</h3>
+        <small class="text-gray-600 dark:text-gray-400 whitespace-nowrap ml-4">{{ post.date | date: "%b %-d, %Y" }}</small>
       </div>
-      <p class="mb-1 text-dark">{{ post.excerpt | strip_html | truncatewords: 50 }}</p>
-      <small class="text-primary">Read more &rarr;</small>
+      <p class="text-gray-700 dark:text-gray-300 mb-2">{{ post.excerpt | strip_html | truncatewords: 50 }}</p>
+      <small class="text-primary dark:text-primary-dark font-medium">Read more &rarr;</small>
     </a>
   {% endfor %}
 </div>
