Build Tailwind CSS and switch from CDN to built file for production

--- a/index.html
+++ b/index.html
@@ -25,23 +25,8 @@ layout: null
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
-  <!-- Tailwind CSS - Using CDN (replace with built file in production) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          colors: {
-            primary: {
-              DEFAULT: '#f4623a',
-              dark: '#ff8c42',
-            },
-          },
-        },
-      },
-    }
-  </script>
+  <!-- Tailwind CSS - Built file -->
+  <link href="css/tailwind.output.css" rel="stylesheet">
   <!-- Custom CSS for skills animations and components -->
   <style>
     /* Skills section animations */
