--- a/index.html
+++ b/index.html
@@ -514,6 +514,13 @@ layout: null
   </footer>
 
   <!-- Custom scripts -->
+  <script>
+    // Initialize dark mode immediately
+    if (localStorage.getItem('darkMode') === 'enabled') {
+      document.documentElement.classList.add('dark');
+      document.body.classList.add('dark-mode');
+    }
+  </script>
   <script src="js/dark-mode.js"></script>
   <script src="js/skills.js"></script>
   
