--- a/index.html
+++ b/index.html
@@ -127,9 +127,15 @@ layout: null
   <!-- <link href="css/tailwind.output.css" rel="stylesheet"> -->
   <script>
     // Initialize dark mode immediately in head to prevent flash
+    // This MUST run before the page renders
     (function() {
-      if (localStorage.getItem('darkMode') === 'enabled') {
-        document.documentElement.classList.add('dark');
+      try {
+        if (localStorage.getItem('darkMode') === 'enabled') {
+          document.documentElement.classList.add('dark');
+          document.body.classList.add('dark-mode');
+        }
+      } catch(e) {
+        console.warn('Dark mode initialization failed:', e);
       }
     })();
   </script>
